fix overflow in bookmark show view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -304,6 +304,7 @@ body {
     .bookmark-show {
         position: relative;
         margin: 2px;
+        overflow-x: auto;
         
         .like-btn {
             display: inline-block;
